@@ -67,8 +67,6 @@ class ClusterInspectionTestCase(ToolTestCase):
                 'master_instance_bid_price': None,
                 'master_instance_type': None,
                 'max_mins_idle': None,
-                'max_hours_idle': None,
-                'mins_to_end_of_hour': None,
                 'num_core_instances': None,
                 'num_task_instances': None,
                 'owner': None,
