@@ -18,6 +18,8 @@ v0.7.0, 2019-10-?? -- fall cleaning
      * self.args
      * self.OPTION_CLASS
      * mrjob.util.parse_and_save_options()
+   * file_upload_args kwarg to runner constructor
+   * max_hours_idle and mins_to_end_of_hour options
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
